03_exponer_pods/pod-nginx-hello.yml
apiVersion: v1
kind: Pod
metadata:
  name: nginx-hello
  labels:
    app: nginx-hello
    ver: "1"
spec:
  containers:
    - name: nginx
      image: nginxdemos/hello:latest
      ports:
        - containerPort: 80
