03_exponer_pods/clusterip.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-clusterip
spec:
  type: ClusterIP
  selector:
    app: nginx-hello
    ver: "1"
  ports:
    - targetPort: 80  # endpoint
      port: 8080      # clusterip
