03_exponer_pods/loadbalancer.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello-loadbalancer
spec:
  type: LoadBalancer
  selector:
    app: nginx-hello
  ports:
    - targetPort: 80  # endpoint
      port: 80        # loadbalancer
  externalIPs:
    - 172.20.227.242  # nodo con IP pública
