03_exponer_pods/nodeport.yml
apiVersion: v1
kind: Service
metadata:
  name: nginx-hello
spec:
  type: NodePort
  selector:
    app: nginx-hello
  ports:
    - targetPort: 80
      port: 8080
      nodePort: 31000
